--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,8 @@ body {
     min-height: 100vh;
     flex-direction: column;
     justify-content: center;
+
+    
 }
 
 header {
@@ -22,6 +24,18 @@ header {
     padding: 2vh 10vw;
     margin: auto;
     text-align: center;
+    font-family: depot-new-web, sans-serif;
+    font-weight: 300;
+    font-style: normal;
+
+
+}
+
+header h1 {
+    font-family: trilby, serif;
+    font-weight: 900;
+    font-style: italic;
+    font-size: 3em;
 }
 
 section {
@@ -31,6 +45,16 @@ section {
     display: flex;
     flex-direction: column;
     justify-content: center;
+
+    font-family: depot-new-web, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+section h2 {
+    font-family: trilby, serif;
+    font-weight: 700;
+    font-style: normal;
 }
 
 footer {
@@ -38,6 +62,10 @@ footer {
     background-color: var(--background-alt);
     padding: 2vh 10vw;
     text-align: center;
+    font-family: trilby, serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: smaller;
 }
 
 .spacer {
