--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,11 @@ section h2 {
     font-style: normal;
 }
 
+section button {
+    width: fit-content;
+    margin: auto;
+}
+
 footer {
     margin-top: auto;
     background-color: var(--background-alt);
