--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,15 @@ body {
     min-height: 100vh;
     flex-direction: column;
     justify-content: center;
+}
 
-    
+a:link, a:visited {
+    color: var(--text);
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
 }
 
 header {
